[project]
name = "bgpstream_website_collector"
version = "0.0.3"
description = "Downloads BGPStream info solely for research purposes"
readme = "README.md"
authors = [
    {name = "Justin Furuness", email = "jfuruness@gmail.com"},
    {name = "Tony Zheng"}
]
license = {file = "LICENSE.txt"}
keywords = [
    "Furuness",
    "BGP",
    "Hijack",
    "Outage",
    "Leak",
    "BGPStream",
    "Peers",
    "Customers",
    "Providers",
    "BGPStream.com"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "beautifulsoup4==4.12.2",
    "tqdm==4.66.1",
    "requests==2.31.0",
    "requests-cache==1.1.1",
]

requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/jfuruness/bgpstream_website_collector.git"

[project.optional-dependencies]
test = [
    "types-beautifulsoup4~=4.12.0",
    "types-requests~=2.31.0",
    "black==23.7.0",
    "pre-commit==3.3.3",
    "types-requests==2.31.0",
    "types-PyYAML==6.0.11",
    "mypy==0.982",
    "flake8==4.0.1",
    "tox==4.6.3",
    "pytest-xdist==2.5.0",
    "ruff==0.0.275"
]

[tool.setuptools.package-data]
bgpstream_website_collector = ["py.typed"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project.scripts]
bgpstream_website_collector = "bgpstream_website_collector.__main__:main"

[tool.pytest.ini_options]
python_files = "test*"
python_classes = "Test*"
python_functions = "test*"
filterwarnings = [
    "ignore::urllib3.exceptions.InsecureRequestWarning"
]
markers = [
    "slow: All slow tests"
]

[tool.mypy]
mypy_path = "bgpstream_website_collector"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
